eks/simple-bank-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 792248914698.dkr.ecr.ap-northeast-1.amazonaws.com/simplebank:latest
          ports:
            - containerPort: 8811
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
