eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "api-simplebank.thangca.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: simple-bank-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - "api-simplebank.thangca.dev"
      secretName: simple-bank-api-cert

  # annotations:
  #   kubernetes.io/ingress.class: "alb"
  #   alb.ingress.kubernetes.io/scheme: "internet-facing"
  #   alb.ingress.kubernetes.io/target-type: "ip"
  #   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
  #   alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
